ags (0.7.16)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed uninitialized values in ags_ipatch_sf2_reader.c
	* fixed Soundfont2 playback

ags (0.7.15)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed Soundfont2 support
	* fixed dead-lock while stop multi-channel playback
	* fixed open WAV files within AgsDrum
	* implemented ags_open_sf2_sample.c

ags (0.7.14)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented AgsConcurrentTree in ags_devout.c and using it in ags_channel.c
	* added task_completion_mutex to AgsGuiThread
	* fixed memory-leak in ags_thread_pool.c

ags (0.7.13)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* reverted changes of AgsTaskThread and AgsThreadPool
	* extended developers book
	* fixed dead-lock with AgsTaskThread

ags (0.7.12)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed all unit tests
	* fixed ags_recycling_create_audio_signal_with_frame_count()
	* implemented timestamp property of AgsPattern and AgsNotation

ags (0.7.11)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed unit tests
	* fixed editor bug
	* refactored ags_recycling_create_audio_signal_with_frame_count()
	* implemented AgsGenericMainLoop
	* added many unit tests in ags_thread_test.c

ags (0.7.10)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed XML IO
	* implemented read and write functions of AgsLadspaBridge, AgsDssiBridge and AgsLv2Bridge
	* fixed lock AgsPort as running recall

ags (0.7.9)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented conversion objects AgsLadspaConversion and AgsLv2Conversion
	* implemended lv2 feature AgsLv2UridManager
	* improved AgsLadspaPlugin, AgsDssiPlugin and AgsLv2Plugin to relay on conversion objects
	* removed JACK server functions because of duplicated symbols
	* fixed integer support of plugins in ags_line_member.c and ags_bulk_member.c